--- a/Patterns.ipynb
+++ b/Patterns.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,55 @@
     "    for j in range(n):\n",
     "        print(\"*\", end=\"\")\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "1 2 3 \n",
+      "1 2 3 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# W.A.P to print the numbers increasing order\n",
+    "\n",
+    "n = eval(input(\"Enter a number: \"))\n",
+    "for i in range(1, n+1):\n",
+    "    for j in range(1, n+1):\n",
+    "        print(j, end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A B \n",
+      "A B \n"
+     ]
+    }
+   ],
+   "source": [
+    "# W.A.P to print the alphabets increasing order\n",
+    "\n",
+    "n = eval(input(\"Enter a number: \"))\n",
+    "for i in range(65 , 65+n):\n",
+    "    for j in range(65, 65+n):\n",
+    "        print(chr(j), end=\" \")\n",
+    "    print()\n"
    ]
   },
   {
